--- a/code/improve_practical_python_algorithms/ch2/note.ipynb
+++ b/code/improve_practical_python_algorithms/ch2/note.ipynb
@@ -18,7 +18,7 @@
     "KANSUJI_DIC = {}\n",
     "for i, key in enumerate(KANSUJI):\n",
     "    KANSUJI_DIC[key] = str(i)\n",
-    "print(KANSUJI_DIC)\n"
+    "print(KANSUJI_DIC)"
    ]
   },
   {
@@ -42,7 +42,7 @@
     "\n",
     "# 関数enumerateについて\n",
     "for i, v in enumerate([\"a\", \"b\", \"c\"]):\n",
-    "    print(i, \"→\", v)\n"
+    "    print(i, \"→\", v)"
    ]
   },
   {
@@ -69,6 +69,37 @@
     "# lambda m: \"零一二三...\"[int(m.group(0))] マッチした数字から漢数字を取り出す\n",
     "re.sub('[0-9]', lambda m: \"零一二三四五六七八九\"[int(m.group(0))], src)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "暗号化 14147\n",
+      "復号化 12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 12345\n",
+    "y = 1914\n",
+    "# XOR演算で暗号化\n",
+    "z = x ^ y\n",
+    "print(\"暗号化\", z)\n",
+    "# 暗号鍵Yで復号化\n",
+    "print(\"復号化\", z ^ y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
