--- a/code/improve_practical_python_algorithms/ch2/note.ipynb
+++ b/code/improve_practical_python_algorithms/ch2/note.ipynb
@@ -96,10 +96,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0xbb', '0xf', '0x43', '0x43', '0x4f', '0xcd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "xor = [0xE8, 0x4A, 0x00, 0x00, 0x00, 0x83]\n",
+    "chars = [\"S\", \"E\", \"C\", \"C\", \"O\", \"N\"]\n",
+    "target=[]\n",
+    "\n",
+    "for i in range(0,len(xor)):\n",
+    "     target.append(hex(xor[i] ^ ord(chars[i])))\n",
+    "print(target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SECCON{UPX_s7ub_1s_a_g0od_pl4c3_f0r_h1din6_c0d3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "xor = [0xe8,0x4a,0x00,0x00,0x00,0x83,0xf9,0x49,\n",
+    "       0x75,0x44,0x53,0x57,0x48,0x8d,0x4c,0x37,\n",
+    "       0xfd,0x5e,0x56,0x5b,0xeb,0x2f,0x48,0x39,\n",
+    "       0xce,0x73,0x32,0x56,0x5e,0xac,0x3c,0x80,\n",
+    "       0x72,0x0a,0x3c,0x8f,0x77,0x06,0x80,0x7e,\n",
+    "       0xfe,0x0f,0x74,0x06,0x2c,0xe8,0x3c,0x01]\n",
+    "\n",
+    "target = [0xbb,0x0f,0x43,0x43,0x4f,0xcd,0x82,0x1c,\n",
+    "          0x25,0x1c,0x0c,0x24,0x7f,0xf8,0x2e,0x68,\n",
+    "          0xcc,0x2d,0x09,0x3a,0xb4,0x48,0x78,0x56,\n",
+    "          0xaa,0x2c,0x42,0x3a,0x6a,0xcf,0x0f,0xdf,\n",
+    "          0x14,0x3a,0x4e,0xd0,0x1f,0x37,0xe4,0x17,\n",
+    "          0x90,0x39,0x2b,0x65,0x1c,0x8c,0x0f,0x7c]\n",
+    "\n",
+    "string = \"\"\n",
+    "for i in range(0,len(xor)):\n",
+    "    string += chr(xor[i] ^ target[i])\n",
+    "print(string)"
+   ]
   }
  ],
  "metadata": {
@@ -118,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
